--- a/cliente.html
+++ b/cliente.html
@@ -6,13 +6,6 @@
     <title>cliente</title>
     <link href="css/tailwind.min.css" rel="stylesheet" />
     <link href="css/style_usuario.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
   </head>
 
   <body class="bg-gray-100 text-gray-800">
@@ -25,7 +18,7 @@
           id="dropdownButton"
           class="flex items-center justify-center p-2 text-white focus:outline-none"
         >
-          <i class="fa-solid fa-bars"></i>
+          <img src="img/hamburg.svg" alt="hamburg">
         </button>
       </div>
       <h1 class="text-white text-3xl font-bold">Clientes</h1>
@@ -70,7 +63,7 @@
       class="fixed bottom-24 sm:bottom-28 right-5 bg-blue-500 text-white p-4 rounded-full shadow-lg hover:bg-blue-700 focus:outline-none"
       aria-label="Abrir formulario"
     >
-      <i class="fa-solid fa-user-plus"></i>
+    <img src="img/adduser.svg" alt="adduser">
     </button>
 
     <!-- Modal con formulario -->
@@ -137,7 +130,7 @@
             class="block w-full py-2 bg-indigo-600 text-white font-bold rounded-lg hover:bg-indigo-700 flex items-center justify-center"
             aria-label="Guardar usuario"
           >
-            <i class="fa-solid fa-floppy-disk mr-2"></i>
+            <img src="img/save.svg" alt="save">
             Guardar Cliente
           </button>
         </form>
@@ -146,7 +139,7 @@
           class="mt-6 block w-full py-2 bg-gray-500 text-white rounded-lg hover:bg-gray-600 flex items-center justify-center"
           aria-label="Cerrar formulario"
         >
-          <i class="fa-solid fa-circle-xmark mr-2"></i>
+          <img src="img/close.svg" alt="close">
           Cerrar
         </button>
       </div>
