--- a/detalle_factura.html
+++ b/detalle_factura.html
@@ -7,9 +7,6 @@
   <title>Detalle facturas</title>
   <link href="css/tailwind.min.css" rel="stylesheet" />
   <link href="css/style_usuario.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="bg-gray-100 text-gray-800">
@@ -17,7 +14,7 @@
   <header class="bg-indigo-600 p-4 shadow-md flex items-center justify-between relative">
     <div class="relative inline-block">
       <button id="dropdownButton" class="flex items-center justify-center p-2 text-white focus:outline-none">
-        <i class="fa-solid fa-bars"></i>
+        <img src="img/hamburg.svg" alt="hamburg">
       </button>
     </div>
     <h1 class="text-white text-3xl font-bold">Detalle facturas</h1>
