--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Usuario</title>
     <link href="css/tailwind.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <body class="flex flex-col min-h-screen bg-gray-100 text-gray-800">
@@ -18,7 +17,7 @@
           id="dropdownButton"
           class="flex items-center justify-center p-2 text-white focus:outline-none"
         >
-        <i class="fa-solid fa-bars"></i>
+          <img src="img/hamburg.svg" alt="hamburg">
         </button>
       </div>
       <h1 class="text-white text-3xl font-bold">Inicio</h1>
