queda funcional detalles factura falta el total de la factura y la factura

--- a/factura.html
+++ b/factura.html
@@ -85,7 +85,7 @@
                 required
                 class="w-full p-2 border rounded-lg focus:ring-2 focus:ring-indigo-500"
               >
-                <option value="">Seleccione un usuario</option>
+                <!-- <option value="">Seleccione un usuario</option> -->
                 <!-- Opciones de usuarios se llenarán dinámicamente -->
               </select>
             </div>
@@ -99,7 +99,7 @@
                 required
                 class="w-full p-2 border rounded-lg focus:ring-2 focus:ring-indigo-500"
               >
-                <option value="">Seleccione un cliente</option>
+                <!-- <option value="">Seleccione un cliente</option> -->
                 <!-- Opciones de clientes se llenarán dinámicamente -->
               </select>
             </div>
