se finaliza todo el proyecto, depronto queda por mejorar la factura y su impresion

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <footer
       class="bg-indigo-600 text-white text-left p-4 fixed bottom-0 w-full"
     >
-      <p>&copy; 2024 Sistema de Gestión. Jose Germán Estrada Clavijo.</p>
+      <p>&copy; 2024 Sistema de Gestión.</p>
     </footer>
 
     <script src="js/script.js"></script>
